@@ -2,6 +2,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1545 using contribution from Edward Kuns [edward.kuns@aspect.com]
+       Added new getIterator() method to Java classes generated for J2 collection types.
+       Details: http://jira.codehaus.org/browse/CASTOR-1545
+       (Werner - 20060909)
+
 XML:   Resolved issue CASTOR-1543 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Fixed problem with incorrent code generation related to the use of primitive types and generics.
        Details: http://jira.codehaus.org/browse/CASTOR-1543
